Updates to projects and index page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <main>
 
 	<!-- Back to top button -->
-	<a href="#" type="button" class="btn btn-primary btn-floating btn-lg" id="btn-back-to-top">
+	<a href="#" type="button" class="btn btn-primary btn-floating" id="btn-back-to-top">
 		<i class="fas fa-arrow-up"></i>
 	</a>
 
@@ -247,7 +247,7 @@
 					</div>
 
 					<div class="d-grid">
-						<button class="btn btn-primary btn-lg" type="submit" id="submitBtn">Submit</button>
+						<button class="btn btn-primary" type="submit" id="submitBtn">Submit</button>
 					</div>
 				</form>
 			</div>
