Updated portfolio text.

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<!--<p class="coverMsg">Welcome to my ePortfolio!</p>-->
 				<h1 class="intro-title mb-4">Welcome to my ePortfolio</h1>
 				<p class="intro-subtitle">I'm a <span class="text-slider-items">3D Developer,Web Designer, Multimedia
-						Designer, Graphic Artist, Mentor</span><strong class="text-slider textEmphasis"></strong></p>
+						Designer, Graphic Artist</span><strong class="text-slider textEmphasis"></strong></p>
 
 				<br /><br />
 				<p>
@@ -81,21 +81,15 @@
 	<div class="py-5 container">
 		<div id="about"></div>
 		<h2 class="sectionHeader">About Me</h2><br />
-
-		<img src="images/profile2.jpg" class="rounded-circle float-start profile" alt="profile"
-			alt="Portrait of Chad Hearrell">
-
-		<p>Hi, my name is <span class="textEmphasis bold">Chad Hearrell</span>. As a member of the Comanche Nation
-			tribe, my Native American heritage adds a unique perspective to my work. I pride myself on being a
-			collaborative and detail-oriented professional, thriving in team-centric environments. Over the course of my
+		<p>Hi, my name is <span class="textEmphasis bold">Chad Hearrell</span>. I pride myself on being a
+			collaborative and detail-oriented professionals. Over the course of my
 			extensive career, I have consistently delivered high-fidelity products across diverse Business
 			Units.<br /><br />
 
-			Some of my interests include learning about character modeling/animation, Virtual Reality (VR) development,
-			and game development. My hobbies include photography, hiking, and building small games in Unity.
+			Some of my interests include learning about character modeling/animation, Virtual Reality (VR)/Augmented Reality (AR) development,
+			and game development. My hobbies include photography, hiking, and building small games in Unity3D.
 			<br /><br />
-			Whether working independently or as part of a team, I bring a multifaceted skill set and a dedication to
-			continuous learning. If you're interested in discovering more about the services that I offer, please feel
+			Whether working independently or as part of a team, I bring a multifaceted skill set. If you're interested in learning more about me or my capabilities, please feel
 			free to <a href="#contact">reach out.</a></p>
 
 	</div>
@@ -104,7 +98,7 @@
 	<div class="py-5 bg-body-tertiary">
 		<div id="services"></div>
 		<div class="container">
-			<h2 class="sectionHeader">Services</h2><br /><br />
+			<h2 class="sectionHeader">Competencies</h2><br /><br />
 
 			<div class="row row-cols-1 row-cols-md-2 g-4">
 				<div class="col">
@@ -114,10 +108,7 @@
 						</div>
 						<div class="card-body">
 							<h5 class="card-title text-center">3D Design</h5>
-							<p class="card-text">Step into a realm of limitless creativity with my 3D design services.
-								Transforming ideas into tangible, visually stunning creations, 3D design adds depth and
-								realism to your projects. My 3D designs elevate your concepts, making them not just
-								visible, but truly immersive.</p><br />
+							<p class="card-text">I am skilled in developing 3D designs that transform ideas into visually stunning creations. My expertise in 3D design adds depth and realism to projects, allowing concepts to be not only visible but also truly immersive.</p><br />
 						</div>
 					</div>
 				</div>
@@ -129,10 +120,7 @@
 						</div>
 						<div class="card-body">
 							<h5 class="card-title text-center">Web Design</h5>
-							<p class="card-text">Forge a powerful online presence with my custom web design services. In
-								the digital landscape, your website is often the first interaction a potential customer
-								has with your brand. Elevate your brand online, ensuring that visitors not only explore
-								but engage with your content seamlessly.</p><br />
+							<p class="card-text">I possess expertise in custom web design, creating impactful online experiences that establish a strong brand presence.  I design sites that facilitate seamless exploration and engagement with content.</p><br />
 						</div>
 					</div>
 				</div>
@@ -143,11 +131,7 @@
 						</div>
 						<div class="card-body">
 							<h5 class="card-title text-center">Videography</h5>
-							<p class="card-text">Unleash the power of visual storytelling with my professional
-								videography services. I specialize in capturing moments that matter, turning them into
-								compelling narratives. From promotional videos that showcase your brand's story to event
-								coverage that encapsulates the atmosphere, my videography services ensure your story is
-								not just told but experienced, creating a lasting impact on your audience.</p><br />
+							<p class="card-text">I specialize in visual storytelling through professional videography, capturing meaningful moments and transforming them into compelling narratives. My skills encompass creating promotional videos that highlight a brand's story.</p><br />
 						</div>
 					</div>
 				</div>
@@ -158,10 +142,7 @@
 						</div>
 						<div class="card-body">
 							<h5 class="card-title text-center">Graphic Design</h5>
-							<p class="card-text">Make a lasting impression with my comprehensive graphic design
-								services. From crafting unique logos that represent your brand identity to designing
-								marketing materials that stand out, my graphic design expertise ensures that your visual
-								communication is not just effective but memorable.</p><br />
+							<p class="card-text">I have a strong background in graphic design, encompassing a wide range of visual communication elements, including branding, marketing materials, and digital content. My expertise ensures that each design not only captures attention but also effectively conveys the intended message.</p><br />
 						</div>
 					</div>
 				</div>
@@ -172,11 +153,7 @@
 						</div>
 						<div class="card-body">
 							<h5 class="card-title text-center">Photography</h5>
-							<p class="card-text">Capture the essence of moments with my professional photography
-								services. Whether it's documenting special events, showcasing products, or crafting
-								striking portraits, my photography brings stories to life through captivating visuals.
-								Every click is an opportunity to freeze time, preserving the beauty and significance of
-								each moment with precision and creativity.</p><br />
+							<p class="card-text">I specialize in professional photography that captures the essence of moments. Whether documenting special events, showcasing products, or creating striking portraits. My approach brings stories to life through captivating visuals.</p><br />
 						</div>
 					</div>
 				</div>
