--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 	<meta charset="utf-8">
 	<title>Chad Hearrell's ePortfolio</title>
 
+	<link rel="icon" href="favicon_io/favicon-16x16.png" sizes="16x16" type="image/png">
+	<link rel="icon" href="favicon_io/favicon-32x32.png" sizes="32x32" type="image/png">
+	<link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+	<link rel="icon" href="favicon_io/android-chrome-192x192.png" sizes="192x192" type="image/png">
+	<link rel="icon" href="favicon_io/android-chrome-512x512.png" sizes="512x512" type="image/png">
+
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="keywords" content="">
