Added a new project

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 		</div>
 	</section>
 
-	<!--About Me-->
+	<!--About-->
 	<div class="py-5 container">
 		<div id="about"></div>
-		<h2 class="sectionHeader">About Me</h2>
+		<h2 class="sectionHeader">About</h2>
 		<p>Hi, my name is <span class="textEmphasis bold">Chad Hearrell</span>. I am a collaborative and detail-oriented professional with experience across various fields. I have a proven track record of delivering high-fidelity products that exceed expectations. 
 
 			Some of my hobbies include character modeling and animation, VR/AR development, and jogging.
