--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
                         I'm a <span class="text-slider-items"></span>
                         <strong class="text-slider textEmphasis"></strong>
                     </p>
-                    <a href="#about" class="btn btn-primary my-2" title="Start Exploring">Start Exploring</a>
+                    <a href="#about" class="btn btn-primary my-2 bounce-hover" title="Start Exploring">Start Exploring <i class="explore-icon fa-solid fa-arrow-down"></i></a>
                 </div>
             </div>
         </section>
 
         <!-- About -->
-        <section class="py-5 container" id="about">
+        <section class="py-5 container" id="about" data-aos="fade-up">
             <h2 class="sectionHeader">About</h2>
             <p id="about-content"></p>
         </section>
@@ -113,11 +113,18 @@
             </div>
         </div>
 
-
-
         <!-- Footer -->
-        <footer class="text-body-secondary py-3 text-center">
-            <p class="mb-1 footer">&copy; <span id="footerName">Chad Hearrell</span> <span id="currentYear"></span></p>
+        <footer class="text-body-secondary py-3 text-center footer-with-socials" id="footer">
+        <span>&copy; <span id="footerName"></span> <span id="currentYear"></span></span>        
+            <div id="footerSocials" class="footer-socials">
+                <a id="social-youtube" href="" target="_blank" title="Softstack Studio">
+                <img src="images/youtube-icon-size_24.png" alt="YouTube">
+                </a>
+
+                <a id="social-blog" href="" target="_blank" title="Softstack Notes">
+                <img src="images/hashnode-icon-size_24.png" alt="Blog">
+                </a>
+            </div>
         </footer>
     </main>
 
@@ -127,13 +134,6 @@
     </a>
 
     <!-- Scripts -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WN6STJZ7EJ"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-WN6STJZ7EJ');
-    </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
